:wrench: fix eslint and prettier configs

--- a/configs/node/ts/.eslintrc.json
+++ b/configs/node/ts/.eslintrc.json
@@ -4,14 +4,12 @@
     "project": "./tsconfig.json",
     "tsconfigRootDir": "./"
   },
-  "plugins": [ "@typescript-eslint" ],
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "standard"
-  ],
+  "plugins": ["@typescript-eslint"],
+  "extends": ["plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/member-delimiter-style": "off"
+    "@typescript-eslint/member-delimiter-style": "off",
+    "prettier/prettier": "error"
   }
 }
