--- a/configs/node/.prettierrc.json
+++ b/configs/node/.prettierrc.json
@@ -2,10 +2,10 @@
   "printWidth": 120,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "quoteProps": "preserve",
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "lf"
