--- a/configs/tmux/.tmux.conf
+++ b/configs/tmux/.tmux.conf
@@ -47,6 +47,7 @@ bind - split-window -v
 
 
 # select-pane -L
+bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
@@ -67,3 +68,10 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Change <Esc> time
 set -g escape-time 0
+
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -bi"
