--- a/.config/i3status-rust/config.desktop.toml
+++ b/.config/i3status-rust/config.desktop.toml
@@ -26,9 +26,10 @@ interval = 1
 format = "{1m}"
 
 [[block]]
-block = "battery"
-interval = 10
-format = "{percentage}% {time}"
+block = "networkmanager"
+on_click = "alacritty -e nmtui"
+interface_name_exclude = ["br\\-[0-9a-f]{12}", "docker\\d+"]
+interface_name_include = []
 
 [[block]]
 block = "sound"
