--- a/.config/sway/config
+++ b/.config/sway/config
@@ -152,4 +152,17 @@ bar {
 
 bindsym $mod+Left workspace prev
 bindsym $mod+Right workspace next
-bindsym $mod+Shift+r exec "$HOME/.config/mkconfig.sh && i3-msg restart"
+bindsym $mod+Shift+r exec "$HOME/.config/mkconfig.sh && swaymsg restart"
+
+input type:touchpad {
+  pointer_accel 0.4
+  tap enabled
+  natural_scroll enabled
+}
+
+input type:keyboard {
+  xkb_options ctrl:nocaps
+  xkb_layout "jp,br"
+  xkb_model "jp106"
+}
+
