--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
   "html.autoClosingTags": true,
-  "typescript.showUnused": false
+  "typescript.showUnused": false,
+  "Lua.diagnostics.globals": ["vim"]
 }
