--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -13,30 +13,32 @@ font:
     style: Italic
   size: 11
 
-
 background_opacity: 0.7
 
 colors:
+  # Default colors
   primary:
-    background: '#161821'
-    foreground: '#d2d4de'
+    background: "0x1a1b26"
+    foreground: "0xa9b1d6"
 
+  # Normal colors
   normal:
-    black:   '#161821'
-    red:     '#e27878'
-    green:   '#b4be82'
-    yellow:  '#e2a478'
-    blue:    '#84a0c6'
-    magenta: '#a093c7'
-    cyan:    '#89b8c2'
-    white:   '#c6c8d1'
+    black: "0x32344a"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xad8ee6"
+    cyan: "0x449dab"
+    white: "0x787c99"
 
+  # Bright colors
   bright:
-    black:   '#6b7089'
-    red:     '#e98989'
-    green:   '#c0ca8e'
-    yellow:  '#e9b189'
-    blue:    '#91acd1'
-    magenta: '#ada0d3'
-    cyan:    '#95c4ce'
-    white:   '#d2d4de'
+    black: "0x444b6a"
+    red: "0xff7a93"
+    green: "0xb9f27c"
+    yellow: "0xff9e64"
+    blue: "0x7da6ff"
+    magenta: "0xbb9af7"
+    cyan: "0x0db9d7"
+    white: "0xacb0d0"
